--- a/packaging/ovis-base.spec.in
+++ b/packaging/ovis-base.spec.in
@@ -110,6 +110,8 @@ Doxygen files for ldms-all package.
 %docdir %{_defaultdocdir}
 %changelog
 
+* Fri Apr 29 2016 Allan <gentile@sandia.gov> 2.4.7-1
+update to latest upstream.
 * Tue Feb 23 2016 Allan <gentile@sandia.gov> 2.4.6-2
 update to latest upstream.
 * Thu Dec 30 2015 Gentile <gentile@sandia.gov> 2.4.6-1
