--- a/ldms/src/sampler/Makefile.am
+++ b/ldms/src/sampler/Makefile.am
@@ -42,7 +42,7 @@ if ENABLE_POW
 libpower_sampler_la_SOURCES = power_sampler.c
 libpower_sampler_la_CFLAGS = $(AM_CFLAGS) @POW_INCDIR_FLAG@
 libpower_sampler_la_LIBADD = $(COMMON_LIBADD) \
-			     -lpow @POW_LIBDIR_FLAG@ @POW_LIB64DIR_FLAG@ \
+			     -lpwr @POW_LIBDIR_FLAG@ @POW_LIB64DIR_FLAG@ \
 			     libtimer_base.la
 pkglib_LTLIBRARIES += libpower_sampler.la
 endif
