baler: bhttpd,bquery - iterator position support and bug fixes
- Add iterator position getter and setter for bquery.
- Add a stateless (no session) bhttpd message query with
  iterator position (query type=msg2).
- Bug fixes in msg_tc and msg_ptc iteration in the reverse direction.

--- a/baler/src/test/Makefile.am
+++ b/baler/src/test/Makefile.am
@@ -25,3 +25,7 @@ bin_PROGRAMS += bheap_test
 bmhash_test_SOURCES = bmhash_test.c
 bmhash_test_LDADD = ../baler/libbaler.la
 bin_PROGRAMS += bmhash_test
+
+bqpos_test_SOURCES = bqpos_test.c
+bqpos_test_LDADD = ../baler/libbaler.la ../query/libbquery.la
+bin_PROGRAMS += bqpos_test
