--- a/ldms/python/ldmsd/Makefile.am
+++ b/ldms/python/ldmsd/Makefile.am
@@ -1,3 +1,3 @@
 pkgpythondir=${pythondir}/ldmsd
-pkgpython_PYTHON = __init__.py ldmsd_setup.py ldmsd_util.py ldmsd_config.py
+pkgpython_PYTHON = __init__.py ldmsd_setup.py ldmsd_util.py ldmsd_config.py ldmsd_request.py
 dist_bin_SCRIPTS = ldmsd_controller
