--- a/packaging/ovis-rhel7.spec.in
+++ b/packaging/ovis-rhel7.spec.in
@@ -12,13 +12,13 @@
 Summary: OVIS LDMS Commands and Libraries
 Name: ldms-all
 Version: @VERSION@
-Release: ovis3%{?dist}
+Release: ovis4%{?dist}
 License: GPLv2 or BSD
 Group: %{ldms_all}
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 Source: %{name}-%{version}.tar.gz
-Requires: rpm >= 4.8.0 ovis-libevent2 boost-devel genders
-BuildRequires: doxygen openssl-devel libibverbs-devel librdmacm-devel gcc ovis-libevent2-devel glib2-devel libibmad-devel boost-devel genders ovis-libevent2
+Requires: rpm >= 4.8.0 libevent boost-devel genders
+BuildRequires: doxygen openssl-devel libibverbs-devel librdmacm-devel gcc libevent-devel glib2-devel libibmad-devel boost-devel genders libevent
 Url: http://ovis.ca.sandia.gov/
 
 Prefix: /usr
@@ -110,6 +110,8 @@ Doxygen files for ldms-all package.
 %docdir %{_defaultdocdir}
 %changelog
 
+* Thu Jun 23 2016 Allan <gentile@sandia.gov> 2.4.7-4
+update to rhel7
 * Fri Apr 29 2016 Allan <gentile@sandia.gov> 2.4.7-1
 update to latest upstream.
 * Tue Feb 23 2016 Allan <gentile@sandia.gov> 2.4.6-2
