--- a/baler/rpm/rhel7.spec.in
+++ b/baler/rpm/rhel7.spec.in
@@ -14,6 +14,9 @@ Source0: %{name}-%{version}.tar.gz
 Requires: ovis-lib-zap >= 1.3.0, ovis-lib-zap-sock >= 1.3.0
 Prefix: @prefix@
 %define _prefix @prefix@
+%define _sysconfdir %{_prefix}/etc
+%define _localstatedir %{_prefix}/var
+%define _sharedstatedir %{_prefix}/var/lib
 
 %description
 Baler - a lossless, deterministic log processing tool.
@@ -40,14 +43,10 @@ rm -rf %{buildroot}
 %files
 %{_bindir}
 %{_libdir}
-%{_sysconfdir}/init.d/balerd
-%{_sysconfdir}/ovis/logrotate.d/balerd
 %if "@ENABLE_SWIG_TRUE@x" == "x"
 %{_prefix}/lib*/python*
-%{_prefix}/etc/baler.cfg
-%{_prefix}/etc/hosts.txt
-%{_prefix}/etc/ovis/eng-dictionary
 %endif
+%{_sysconfdir}
 
 
 # baler-devel package
