ovis-trinity: first release 	- fixed LDMSD_CFG_UNLOCK 	- ldms.cfg installs into /etc/ 	- baler config files install into /opt/ovis/etc 	- set_ovis_variables.sh installs into /etc/profile.d

--- a/baler/etc/init.d/Makefile.am
+++ b/baler/etc/init.d/Makefile.am
@@ -1,3 +1,5 @@
+EXTRA_DIST = balerd
+
 install-data-local:
 	$(MKDIR_P) $(DESTDIR)/$(sysconfdir)/init.d
 	$(INSTALL_SCRIPT) $(builddir)/balerd $(DESTDIR)/$(sysconfdir)/init.d/
