--- a/ldms/etc/systemd/Makefile.am
+++ b/ldms/etc/systemd/Makefile.am
@@ -20,6 +20,7 @@ $(builddir)/%.env: $(srcdir)/%.env.in
 	$(do_subst) < $< > $@
 
 EXTRA_DIST = ldmsauth.conf \
+	     ldms.cfg \
 	     ldmsplugin.sampler.conf \
 	     ldmsplugin.aggregator.conf \
 	     ldmsd.aggregator.env.in \
@@ -31,6 +32,7 @@ install-data-local: $(SVC_ENV_FILES)
 	$(MKDIR_P) $(SYSTEMD_DIR)
 	$(INSTALL_DATA) $(SVC_ENV_FILES) $(SYSTEMD_DIR)/
 	$(INSTALL) -m 600 $(srcdir)/ldmsauth.conf $(CONF_DIR)
+	$(INSTALL) -m 644 $(srcdir)/ldms.cfg $(CONF_DIR)
 	$(INSTALL_DATA) $(srcdir)/ldmsplugin.sampler.conf $(CONF_DIR)
 	$(INSTALL_DATA) $(srcdir)/ldmsplugin.aggregator.conf $(CONF_DIR)
 
@@ -40,5 +42,6 @@ uninstall-local:
 	rm -f $(SYSTEMD_DIR)/ldmsd.aggregator.service
 	rm -f $(SYSTEMD_DIR)/ldmsd.aggregator.env
 	rm -f $(CONF_DIR)/ldmsauth.conf
+	rm -f $(CONF_DIR)/ldms.cfg
 	rm -f $(CONF_DIR)/ldmsplugin.sampler.conf
 	rm -f $(CONF_DIR)/ldmsplugin.aggregator.conf
