--- a/lib/etc/ovis/Makefile.am
+++ b/lib/etc/ovis/Makefile.am
@@ -1,3 +1,4 @@
+EXTRA_DIST = ovis-functions.sh set-ovis-variables.sh ovis-logrotate
 install-data-local:
 	$(MKDIR_P) $(DESTDIR)/$(sysconfdir)/ovis
 	$(MKDIR_P) $(DESTDIR)/$(sysconfdir)/profile.d
