--- a/lib/packaging/ovis-lib-rhel7.spec.in
+++ b/lib/packaging/ovis-lib-rhel7.spec.in
@@ -269,6 +269,11 @@ Miscellaneous file in ovis-lib project.
 %{_libdir}/ovis-lib-configvars.sh
 %{_includedir}/ovis-lib-config.h
 %{_bindir}/lib-pedigree
+%{_sysconfdir}/profile.d/set-ovis-variables.sh
+%{_sysconfdir}/ovis/ovis-functions.sh
+%{_sysconfdir}/cron.hourly/ovis-logrotate
+%{_sysconfdir}/ld.so.conf.d/ovis-ld-so.conf
+
 
 # These are the files that we don't care
 %exclude %{_includedir}/ovis-test/
