ldms: don't build unmaintained etc/
Remove unmaintained scripts under etc/ from the build list.

--- a/ldms/etc/Makefile.am
+++ b/ldms/etc/Makefile.am
@@ -2,10 +2,12 @@ ACLOCAL_AMFLAGS = -I m4
 SUBDIRS =
 
 # init script
-SUBDIRS += init.d
+#   init.d is currently unmaintained
+# SUBDIRS += init.d
 
 # logrotate
-SUBDIRS += logrotate.d
+#   logrotate.d is currently unmaintained
+# SUBDIRS += logrotate.d
 
 # systemd config files
 SUBDIRS += systemd
