lib: etc maintenance
- remove OVIS custom log-rotate installation, in favor of using the
  system-provided logrotate.

- ovis-ld-so.conf and set-ovis-variables.sh maintenance; do @VAR@
  substitution at Make time because @VAR@ is not fully expanded at
  configure time. For example, libdir=${exec_prefix}/lib is replaced
  as-is for @libdir@. With this change, @libdir@ will be fully
  expanded at Make time.

--- a/lib/etc/ld.so.conf.d/Makefile.am
+++ b/lib/etc/ld.so.conf.d/Makefile.am
@@ -1,4 +1,17 @@
-install-data-local:
+EXTRA_DIST = ovis-ld-so.conf.in
+
+do_subst = sed -e 's,[@]datadir[@],$(datadir),g' \
+	   -e 's,[@]localstatedir[@],$(localstatedir),g' \
+	   -e 's,[@]libdir[@],$(libdir),g' \
+	   -e 's,[@]sysconfdir[@],$(sysconfdir),g' \
+	   -e 's,[@]pythondir[@],$(pythondir),g' \
+	   -e 's,[@]bindir[@],$(bindir),g' \
+	   -e 's,[@]sbindir[@],$(sbindir),g'
+
+ovis-ld-so.conf: ovis-ld-so.conf.in
+	$(do_subst) < $< > $@
+
+install-data-local: ovis-ld-so.conf
 	$(MKDIR_P) $(DESTDIR)/$(sysconfdir)/ld.so.conf.d/
 	$(INSTALL_DATA) $(builddir)/ovis-ld-so.conf $(DESTDIR)/$(sysconfdir)/ld.so.conf.d/
 
