ldms: etc/ maintenance
- relocate ldms-related configuration to etc/ldms/
- maintain systemd sctipts
- remove unmaintained init.d script from installation

--- a/ldms/etc/ldmsd.sampler.env.in
+++ b/ldms/etc/ldmsd.sampler.env.in
@@ -9,14 +9,12 @@ LDMSD_PORT=10000
 # LDMSD configuration port, for ldmsd_controller over the network. Configuration
 # transport always use 'socket', and is separated from the LDMS_XPRT.
 LDMSD_CONFIG_PORT=10001
-# Named socket path for ldmsd_controller
-LDMSD_SOCK_PATH=@localstatedir@/run/ldmsd/sampler.sock
 
-# Authentication file path, see @sysconfdir@/ovisauth.conf for an example
-LDMSD_AUTH_FILE=@sysconfdir@/ldmsauth.conf
+# Authentication file path, see @sysconfdir@/ldms/ldmsauth.conf for an example
+LDMSD_AUTH_FILE=@sysconfdir@/ldms/ldmsauth.conf
 
-# LDMS plugin configuration file, see @sysconfdir@/ldmsplugin.conf for an example
-LDMSD_PLUGIN_CONFIG_FILE=@sysconfdir@/ldmsplugin.sampler.conf
+# LDMS plugin configuration file, see @sysconfdir@/ldms/ldmsplugin.sampler.conf for an example
+LDMSD_PLUGIN_CONFIG_FILE=@sysconfdir@/ldms/ldmsplugin.sampler.conf
 
 
 # These are configured by configure script, no need to change.
