--- a/ldms/etc/ldmsplugin.aggregator.conf
+++ b/ldms/etc/ldmsplugin.aggregator.conf
@@ -3,11 +3,11 @@
 # Adding 1 producer per ldmsd.sampler, if you have thousands of nodes, feel free
 # to use a script to generate the configuration file. Producers take care only
 # the LDMS connection aspect. Updater will take care of the data updating logic.
-prdcr_add name=prd1 host=hostname_1 type=active xprt=$LDMS_XPRT port=10000 \
+prdcr_add name=prd1 host=hostname_1 type=active xprt=$LDMSD_XPRT port=10000 \
 	interval=20000
 prdcr_start name=prd1
 
-prdcr_add name=prd2 host=hostname_2 type=active xprt=$LDMS_XPRT port=10000 \
+prdcr_add name=prd2 host=hostname_2 type=active xprt=$LDMSD_XPRT port=10000 \
 	interval=20000
 prdcr_start name=prd2
 
