--- a/ldms/packaging/rhel7.spec.in
+++ b/ldms/packaging/rhel7.spec.in
@@ -53,8 +53,7 @@ rm -rf %{buildroot}
 %{_datadir}/doc/@PACKAGE_NAME@-@PACKAGE_VERSION@/COPYING
 %{_datadir}/doc/@PACKAGE_NAME@-@PACKAGE_VERSION@/ChangeLog
 %{_datadir}/doc/@PACKAGE_NAME@-@PACKAGE_VERSION@/README
-%{_sysconfdir}/ldms*.conf
-%{_sysconfdir}/ldms.cfg
+%{_sysconfdir}/ldms
 %{_sysconfdir}/systemd
 %exclude %{_sysconfdir}/init.d
 %exclude %{_sysconfdir}/ovis
