--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -137,6 +137,7 @@ if test -d ${OVIS_LIB_LIB64DIR}/ovis-lib ; then
 else
 	ZAP_LIBPATH=${OVIS_LIB_LIBDIR}/ovis-lib
 fi
+ZAP_LIBPATH=${ZAP_LIBPATH#*/rpm7/BUILDROOT}
 AC_SUBST(ZAP_LIBPATH)
 LDMSD_PLUGIN_LIBPATH=${pkglibdir}
 AC_SUBST(LDMSD_PLUGIN_LIBPATH)
