ldms: etc - relocate ldms.cfg
relocate ldms.cfg to be in the same directory as other ldms
configuration.

--- a/ldms/etc/Makefile.am
+++ b/ldms/etc/Makefile.am
@@ -23,7 +23,8 @@ EXTRA_DIST = ldmsauth.conf \
 	     ldmsplugin.sampler.conf \
 	     ldmsplugin.aggregator.conf \
 	     ldmsd.aggregator.env.in \
-	     ldmsd.sampler.env.in
+	     ldmsd.sampler.env.in \
+	     ldms.cfg
 
 ENV_FILES = $(builddir)/ldmsd.sampler.env \
 	    $(builddir)/ldmsd.aggregator.env
@@ -38,6 +39,7 @@ install-data-local: $(ENV_FILES)
 	$(MKDIR_P) $(CONF_DIR)
 	$(INSTALL_DATA) $(ENV_FILES) $(CONF_DIR)/
 	$(INSTALL) -m 600 $(srcdir)/ldmsauth.conf $(CONF_DIR)
+	$(INSTALL_DATA) $(srcdir)/ldms.cfg $(CONF_DIR)
 	$(INSTALL_DATA) $(srcdir)/ldmsplugin.sampler.conf $(CONF_DIR)
 	$(INSTALL_DATA) $(srcdir)/ldmsplugin.aggregator.conf $(CONF_DIR)
 
@@ -47,3 +49,4 @@ uninstall-local:
 	rm -f $(CONF_DIR)/ldmsauth.conf
 	rm -f $(CONF_DIR)/ldmsplugin.sampler.conf
 	rm -f $(CONF_DIR)/ldmsplugin.aggregator.conf
+	rm -f $(CONF_DIR)/ldms.cfg
